found error in actions file

--- a/.github/workflows/action-demo.yml
+++ b/.github/workflows/action-demo.yml
@@ -19,7 +19,7 @@ jobs:
           ls -r ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - name: Install dep
-        run:  pip3 install --no-cache-dir -r requirements.txt
+        run:  pip3 install --no-cache-dir -r requirement.txt
       - name: Run experiment
         run: python3 exp.py
       - run: echo "Q1 is done "
